WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
249775
[GStreamer] ImageDecoder fixes
https://bugs.webkit.org/show_bug.cgi?id=249775
Summary
[GStreamer] ImageDecoder fixes
Philippe Normand
Reported
2022-12-22 08:12:43 PST
We should clear the bus sync handler when destructing the decoder, at least.
Attachments
Add attachment
proposed patch, testcase, etc.
Philippe Normand
Comment 1
2022-12-22 08:25:03 PST
Pull request:
https://github.com/WebKit/WebKit/pull/8006
EWS
Comment 2
2022-12-23 08:50:13 PST
Committed
258293@main
(f28f93033a2c): <
https://commits.webkit.org/258293@main
> Reviewed commits have been landed. Closing PR #8006 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2022-12-23 08:51:17 PST
<
rdar://problem/103671639
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug