Cherry-pick 258293@main (f28f93033a2c). https://bugs.webkit.org/show_bug.cgi?id=249775

[GStreamer] ImageDecoder fixes
    https://bugs.webkit.org/show_bug.cgi?id=249775

    Reviewed by Xabier Rodriguez-Calvar.

    Before tearing down the decoder pipeline it is good practice to disconnect all message bus handlers
    and also the decodebin pad-added signal handler.

    * Source/WebCore/platform/graphics/gstreamer/ImageDecoderGStreamer.cpp:
    (WebCore::ImageDecoderGStreamer::InnerDecoder::~InnerDecoder):
    * Source/WebCore/platform/graphics/gstreamer/ImageDecoderGStreamer.h:

    Canonical link: https://commits.webkit.org/258293@main